Bug 101590 - Cannot import templates with template manager (with GTK3)
Summary: Cannot import templates with template manager (with GTK3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords:
: 103520 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2016-08-18 06:17 UTC by vimacs.hacks
Modified: 2016-10-26 20:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vimacs.hacks 2016-08-18 06:17:14 UTC
I'm using LibreOffice-fresh 5.2.0.4 and I cannot import a template with template manager. But it's ok in LibreOffice-still. I'm using Arch Linux with i3 window manager.

Steps to reproduce:
1. File->Templates->Manage Templates, or Shift-Ctrl-N
2. Click 'Import'
3. Select 'My Templates' Category and click 'OK'
4. Then there's a file selection window, but I cannot click anything in the window. I can only click cancel of the Template window and then click OK of the file selection window, and no templates imported.
Comment 1 Regina Henschel 2016-08-18 11:17:34 UTC
I cannot confirm it for Windows. Here is works with the Windows file dialog and with LibreOffice file dialog as well. I have tested it with Version: 5.2.0.2
Build ID: a7567a46e5d2953c320b13eb88a3981c4f9bd1e0
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: de-DE (de_DE)

Which kind of file dialog do you use, that from your OS or that from LibreOffice?
Comment 2 vimacs.hacks 2016-08-19 06:24:35 UTC
In Arch Linux, it's using a GTK3 file dialog. I tested it again in Debian Testing. Without libreoffice-gtk3 installed, there's no such a bug, but after I install libreoffice-gtk3, I can reproduce this bug.
Comment 3 Caolán McNamara 2016-10-18 08:56:58 UTC
The intermediate dialog is taken as the parent of the file selector, but its not a suitable candidate post Execute so the grab stack is all wrong. Other places where that category dialog are used do the right "Close" call before going on to fire up a new toplevel file picker
Comment 4 Commit Notification 2016-10-18 09:02:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7ac773480bfbfcaac15c9bfdeeab400028a96d4

Resolves: tdf#101590 cannot interact with filepicker from import category

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-10-18 09:03:52 UTC
5-2 backport in gerrit
Comment 6 Commit Notification 2016-10-18 13:29:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=065d396c10b69feaaf7cbff8803bf1bf5bd3acaf&h=libreoffice-5-2

Resolves: tdf#101590 cannot interact with filepicker from import category

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2016-10-26 20:37:24 UTC
*** Bug 103520 has been marked as a duplicate of this bug. ***