Resolves: tdf#101590 cannot interact with filepicker from import category

the post-execute category dialog is picked as the toplevel parent, and
gtk3 vclplug will grab events to that hierarchy, but can't interact with
them in this state. Just dispose the category dialog so its not a
candidate for the file dialog parent.

Change-Id: I063fc6d687d556db229e2e200bb280a6cd3425f5